@@ -1,5 +1,13 @@
 2015-01-28  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
+	* src/balsa-icons.c (load_balsa_pixmap),
+	(balsa_register_pixmaps): prune much pointless code.
+	* src/sendmsg-window.c (subject_not_empty),
+	(check_suggest_encryption): fix broken icons.
+	* src/toolbar-factory.c (balsa_toolbar_new): ditto.
+
+2015-01-28  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
 	* src/ab-main.c (bab_cleanup), (set_address_book_menu_items),
 	(get_main_menu), (bab_window_list_new), (bab_window_new),
 	(ab_warning), (bab_set_intial_address_book), (main): streamline
